# Design-Patterns

./: LICENSE  README.md  pyproject.toml
lesson_1/: .session  views.py
lesson_1/templates/: contact.html  index.html
lesson_1/wsgi_framework/: core.py
lesson_2/: run.py  settings.py  urls.py
lesson_2/templates/: contact.html  index.html
lesson_2/wsgi_framework/: request_middleware.py
lesson_3/: run.py  views.py
lesson_3/templates/: base.html  contact.html  index.html  main_css.html  main_footer.html  main_header.html  side_bar.html
lesson_4/: settings.py  urls.py  views.py
lesson_4/patterns/: constants.py
lesson_4/patterns/creation_patterns/: category.py
lesson_4/templates/: about.html  create_product.html  index.html  product_list.html
lesson_4/wsgi_framework/: core.py
lesson_5/: views.py
lesson_5/patterns/: engine.py
lesson_5/patterns/creation_patterns/: logger.py  product_factory.py  user_factory.py
lesson_5/templates/includes/: main_footer.html  main_header.html
lesson_5/wsgi_framework/: core.py
lesson_6/: run.py  settings.py  views.py
lesson_6/patterns/: constants.py  engine.py
lesson_6/templates/: contact.html  course_list.html  create_category.html
lesson_6/wsgi_framework/: request_middleware.py
lesson_7/: middleware.py  settings.py  views.py
lesson_7/patterns/: constants.py  engine.py
lesson_7/templates/: about.html  add_student.html  base.html  create_course.html  create_student.html  index.html  student_list.html  students_by_course.html
lesson_7/wsgi_framework/: templator.py
(+20 files in other folders)
