[tool.poetry]
name = "design-patterns"
version = "0.1.0"
description = ""
authors = ["Sego <grayg@mail.ru>"]
readme = "README.md"
packages = [{include = "design_patterns"}]

[tool.poetry.dependencies]
python = "^3.10"
gunicorn = "^20.1.0"
jinja2 = "^3.1.2"
jsonpickle = "^3.0.1"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
